Fixed invisible icons

--- a/style.css
+++ b/style.css
@@ -85,18 +85,23 @@ a:hover {
 }
 
 .social-icon {
-
     border: none;
     color: white;
     padding: 10px 20px;
-    /* text-align: center; */
-    /* text-decoration: none;  */
     display: inline-block;
     font-size: 40px;
-    /* margin: 4px 2px; */
     cursor: pointer;
-    /* height: 40px; */
 }
+
+/* .social-icon {
+
+    border: none;
+    color: pink;
+    padding: 10px 20px;
+    display: inline-block;
+    font-size: 40px;
+    cursor: pointer;
+} */
 
 .social-icon:hover {
     color: #8fcade;
@@ -110,9 +115,10 @@ a:hover {
 }
 
 .contactgroup {
-    opacity: 0.7;
+    /* opacity: 0.7; */
     /* padding-top: 30px; */
-    background-color: #008CBA;
+    /* background-color: #008CBA; */
+    background-color: #008bba69;
     
 }
 
